_course_files/x86_amd64/1-Telemetry/6-istio-vs.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-staff-service
  namespace: default
  labels:
    kiali_wizard: weighted_routing
spec:
  hosts:
    - fleetman-staff-service.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: fleetman-staff-service.default.svc.cluster.local
            subset: safe
          weight: 0
        - destination:
            host: fleetman-staff-service.default.svc.cluster.local
            subset: risky
          weight: 100
