_course_files/x86_amd64/1-Telemetry/7-istio-ds.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-staff-service
  namespace: default
  labels:
    kiali_wizard: weighted_routing
spec:
  host: fleetman-staff-service.default.svc.cluster.local
  subsets:
    - labels:
        version: safe
      name: safe
    - labels:
        version: risky
      name: risky
